# Large-Group-Project

./: .gitignore  README.md  SOCKETIO_FALLBACK.md  SOCKETIO_IMPLEMENTATION_SUMMARY.md  SOCKETIO_QUICKSTART.md  SOCKETIO_QUICK_REFERENCE.md  package-lock.json  package.json  server.js
.cleanup_hold/frontend/src/: CHECKTHISOUT.md
flutterink/: README.md  pubspec.yaml
flutterink/android/app/: build.gradle.kts
flutterink/ios/Runner/: Info.plist
flutterink/ios/Runner.xcodeproj/: project.pbxproj
flutterink/lib/: main.dart
flutterink/lib/api/: api.dart  board_service.dart  profile_service.dart  user_service.dart
flutterink/lib/dialogs/: board_options_dialog.dart  create_board_dialog.dart  join_board_dialog.dart  verify_email_dialog.dart
flutterink/lib/models/: board.dart  board_model.dart  user.dart
flutterink/lib/providers/: board_provider.dart
flutterink/lib/screens/: auth_choice_screen.dart  board_detail_screen.dart  dashboard_screen.dart  enter_code_screen.dart  home_screen.dart  login_screen.dart  onboarding_screen.dart  register_screen.dart  signup_screen.dart  verify_email_screen.dart  whiteboard_screen.dart  why_account_screen.dart
flutterink/lib/services/: auth_state.dart  collab_service.dart  prefs_service.dart
flutterink/lib/theme/: app_colors.dart  app_theme.dart  inkboard_theme.dart
flutterink/lib/utils/: routes.dart
flutterink/lib/widgets/: board_card_widget.dart  code_widget.dart  dotted_background.dart  tag_input_widget.dart
flutterink/linux/: CMakeLists.txt
flutterink/linux/runner/: my_application.cc
flutterink/macos/Runner.xcodeproj/: project.pbxproj
flutterink/test/: widget_test.dart
flutterink/windows/: CMakeLists.txt
flutterink/windows/runner/: Runner.rc  main.cpp
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  signup.css
frontend/src/api/: axios.ts
frontend/src/components/: CtaSection.tsx  (+8 more)
ink-stress-test/: package-lock.json  package.json  stress.js
inksubserver/: .clangd  .gitignore  CLAUDE.md  CMakeLists.txt  compile_commands.json  deploy.sh  inksubserver.service
inksubserver/.claude/: settings.local.json
inksubserver/config/: config.example.json
inksubserver/scripts/: install_deps.sh  install_deps_linux.sh  install_deps_macos.sh  run_local.sh  setup_server.sh
inksubserver/src/Cpp/: Link.cpp  main.cpp
inksubserver/src/Headers/: Link.h
server/: .env.example  GOOGLE OAUTH INFO.md  jest.config.js  package-lock.json  package.json  tsconfig.json
server/src/: app.ts  server.ts
server/tests/: auth.test.ts  boards.test.ts  setup.ts  user.test.ts
(+94 files in other folders)
